--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://DikiyDanyarDarabozNaimanTigrRRRRR.github.io/github-searchapi",
+  "homepage": "http://DikiyDanyarDarabozNaimanTigrRRRRR.github.io/github-searchapi/",
   "name": "hm-react4",
   "version": "0.1.0",
   "private": true,
@@ -16,8 +16,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "predeplay": "npm run build",
-    "deplay": "gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
