--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://DikiyDanyarDarabozNaimanTigrRRRRR.github.io/github-searchapi/",
+  "homepage": "https://DikiyDanyarDarabozNaimanTigrRRRRR.github.io/ReactHm5/",
   "name": "hm-react4",
   "version": "0.1.0",
   "private": true,
